--- a/app/templates/album.html
+++ b/app/templates/album.html
@@ -4,20 +4,20 @@
             <img src="/assets/images/album_covers/01.png" class="album-cover-art">
         </div>
         <div class="album-view-details column half">
-            <h2 class="album-view-title">{{ album.albumData[0].title }}</h2>
-            <h3 class="album-view-artist">{{ album.albumData[0].artist }}</h3>
-            <h5 class="album-view-release-info">{{ album.albumData[0].year }} {{ album.albumData[0].label }}</h5>
+            <h2 class="album-view-title">{{ album.albumData.title }}</h2>
+            <h3 class="album-view-artist">{{ album.albumData.artist }}</h3>
+            <h5 class="album-view-release-info">{{ album.albumData.year }} {{ album.albumData.label }}</h5>
         </div>
     </section>
     <table class="album-view-song-list">
-        <tr class="album-view-song-item" ng-mouseover="hovered = true" ng-mouseleave="hovered = false" ng-repeat="x in album.albumData">
+        <tr class="album-view-song-item" ng-mouseover="hovered = true" ng-mouseleave="hovered = false" ng-repeat="x in album.albumData.songs">
             <td class="song-item-number">
                 <span ng-show="!playing && !hovered">{{$index + 1}}</span>
                 <a class="album-song-button" ng-show="!playing && hovered"><span class="ion-play"></span></a>
                 <a class="album-song-button" ng-show="playing"><span class="ion-pause"></span></a>
             </td>
-            <td class="song-item-title">{{ x.songs[$index].title }}</td>
-            <td class="song-item-duration">{{ x.songs[$index].duration }}</td>
+            <td class="song-item-title">{{ x.title }}</td>
+            <td class="song-item-duration">{{ x.duration }}</td>
         </tr>
     </table>
 </main>
